// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus011SubSchedule {
extensions 14 to 114;

  optional ccsds_mal.protobuf.UINTEGER ssId = 1;
  optional ccsds_mal.protobuf.UINTEGER status = 2;
  optional ccsds_mal.protobuf.TIME executionTimeFirstTc = 3;
  optional ccsds_mal.protobuf.UINTEGER apid = 4;
  optional pusGroundModel.protobuf.PusElement pusElement = 5;
  optional ccsds_mal.protobuf.TIME groundDate = 6;
  optional ccsds_mal.protobuf.STRING ssIdLabel = 7;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 8;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStatus = 9;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeExecTimeFirstTc = 10;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeExecTimeFirstTc = 11;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSsId = 12;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeSsId = 13;
}
